force-app/main/default/objects/FEC_Committee__c/FEC_Committee__c.object-meta.xml
<CustomObject>
    <description>Represents FEC committees including candidate committees, PACs, and party committees. Synced from the Federal Election Commission OpenFEC API.</description>
    <label>FEC Committee</label>
    <nameField>
        <label>FEC Committee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEC Committees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>