force-app/main/default/objects/FEC_Committee__c/fields/Cash_on_Hand__c.field-meta.xml
<CustomField>
    <fullName>Cash_on_Hand__c</fullName>
    <label>Cash on Hand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>