force-app/main/default/objects/FEC_Committee__c/fields/Committee_Name__c.field-meta.xml
<CustomField>
    <fullName>Committee_Name__c</fullName>
    <label>Committee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>