force-app/main/default/objects/FEC_Committee__c/fields/Committee_Type__c.field-meta.xml
<CustomField>
    <fullName>Committee_Type__c</fullName>
    <label>Committee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Senate</fullName>
            </value>
            <value>
                <fullName>Presidential</fullName>
            </value>
            <value>
                <fullName>PAC</fullName>
            </value>
            <value>
                <fullName>Party</fullName>
            </value>
            <value>
                <fullName>Super PAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>