force-app/main/default/objects/FEC_Committee__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <label>Election Cycle</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>