force-app/main/default/objects/FEC_Committee__c/fields/FEC_Committee_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Committee_ID__c</fullName>
    <description>FEC committee identifier (e.g., C00177436). Used as the external ID for upsert operations.</description>
    <externalId>true</externalId>
    <label>FEC Committee ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>