force-app/main/default/objects/FEC_Committee__c/fields/Legislator__c.field-meta.xml
<CustomField>
    <fullName>Legislator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Legislator if this is their campaign committee.</description>
    <label>Legislator</label>
    <referenceTo>Legislator__c</referenceTo>
    <relationshipLabel>FEC Committees</relationshipLabel>
    <relationshipName>FEC_Committees</relationshipName>
    <type>Lookup</type>
</CustomField>