force-app/main/default/objects/FEC_Committee__c/fields/PAC_Sync_Chain_Token__c.field-meta.xml
<CustomField>
    <fullName>PAC_Sync_Chain_Token__c</fullName>
    <description>Internal token identifying the active guarded PAC queueable chain.</description>
    <label>PAC Sync Chain Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>