force-app/main/default/objects/FEC_Committee__c/fields/PAC_Sync_Cycle__c.field-meta.xml
<CustomField>
    <fullName>PAC_Sync_Cycle__c</fullName>
    <description>Election cycle currently being processed by the guarded PAC queueable chain.</description>
    <label>PAC Sync Cycle</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>