force-app/main/default/objects/FEC_Committee__c/fields/PAC_Sync_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>PAC_Sync_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True while a guarded PAC contribution queueable chain is active for this committee.</description>
    <label>PAC Sync In Progress</label>
    <type>Checkbox</type>
</CustomField>