force-app/main/default/objects/FEC_Committee__c/fields/PAC_Sync_Lock_Expires__c.field-meta.xml
<CustomField>
    <fullName>PAC_Sync_Lock_Expires__c</fullName>
    <description>Timestamp after which a stale guarded PAC queueable lock can be reclaimed.</description>
    <label>PAC Sync Lock Expires</label>
    <type>DateTime</type>
</CustomField>