force-app/main/default/objects/FEC_Committee__c/fields/Total_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Total_Disbursements__c</fullName>
    <label>Total Disbursements</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>