force-app/main/default/objects/FEC_Committee__c/fields/Total_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Total_Receipts__c</fullName>
    <label>Total Receipts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>